Remove dependency on l2switch.